@@ -4,7 +4,7 @@ Description: Datasets and functions to benchmark (convergence, speed, ease of us
 Imports: R6, pkgload
 Suggests: brnn, validann
 Depends: R (>= 3.5.0)
-Version: 3.1.2
+Version: 3.1.3
 Date: 2020-08-26
 License: GPL-2
 Maintainer: Patrice Kiener <rpackages@inmodelia.com>
