@@ -28,7 +28,7 @@ NNbenchmark or the result of \code{\link{timediff}}.
 }
 \examples{
 #with legacy code, no longer usable with 2020 trainPredict
-options("digits.secs" = 4)
+old <- options("digits.secs" = 4)
 timeTT <- createTimer()
 
 timeTT$start("event")
@@ -47,5 +47,7 @@ y_pred <- y0 + rnorm(length(y0), sd = 0.3)
 time <- timediff()
 
 NNsummary(y_pred, y0, time, 4)
+
+options(old)      
   
 }
